# poetry-exec-plugin

./: CHANGELOG  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: codeql-analysis.yml  publish.yaml  test.yaml
poetry_exec_plugin/: plugin.py
tests/: test_plugin.py
