[project]
name = "poetry-exec-plugin"
version = "1.0.1"

[tool.poetry]
name = "poetry-exec-plugin"
version = "1.0.0"
description = "A plugin for poetry that allows you to execute scripts defined in your pyproject.toml, just like you can in npm or pipenv."
authors = ["keattang"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/keattang/poetry-exec-plugin"
repository = "https://github.com/keattang/poetry-exec-plugin"

[tool.poetry.dependencies]
poetry = ">=1.2.0,<3.0.0"
python = "^3.9"
toml = "^0.10.2"
pip = "^25.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"
pytest = "^8.3.5"
types-toml = "^0.10.8.7"

[tool.poetry-exec-plugin.commands]
lint = "flake8 && black --check . && mypy ."
test = "pytest"
format = "black ."

[tool.poetry.plugins."poetry.application.plugin"]
exec = "poetry_exec_plugin.plugin:ExecPlugin"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 85
